Cmc 1856 claimant response (#645)