@@ -9,15 +9,13 @@ import uk.gov.hmcts.reform.civil.callback.Callback;
 import uk.gov.hmcts.reform.civil.callback.CallbackHandler;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
-import uk.gov.hmcts.reform.civil.enums.MultiPartyScenario;
-import uk.gov.hmcts.reform.civil.enums.RespondentResponseTypeSpec;
-import uk.gov.hmcts.reform.civil.enums.SuperClaimType;
+import uk.gov.hmcts.reform.civil.enums.RespondentResponseType;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.common.Element;
 import uk.gov.hmcts.reform.civil.model.documents.CaseDocument;
 import uk.gov.hmcts.reform.civil.service.docmosis.dq.DirectionsQuestionnaireGenerator;
 
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -32,18 +30,14 @@ import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
 @RequiredArgsConstructor
 public class GenerateDirectionsQuestionnaireCallbackHandler extends CallbackHandler {
 
-    private static final List<CaseEvent> EVENTS = List.of(
-        GENERATE_DIRECTIONS_QUESTIONNAIRE
-    );
+    private static final List<CaseEvent> EVENTS = Collections.singletonList(GENERATE_DIRECTIONS_QUESTIONNAIRE);
 
     private final DirectionsQuestionnaireGenerator directionsQuestionnaireGenerator;
     private final ObjectMapper objectMapper;
 
     @Override
     protected Map<String, Callback> callbacks() {
-        return Map.of(
-            callbackKey(ABOUT_TO_SUBMIT), this::prepareDirectionsQuestionnaire
-        );
+        return Map.of(callbackKey(ABOUT_TO_SUBMIT), this::prepareDirectionsQuestionnaire);
     }
 
     @Override
@@ -51,96 +45,20 @@ public class GenerateDirectionsQuestionnaireCallbackHandler extends CallbackHand
         return EVENTS;
     }
 
-    public void generateDQ1v2SameSol(CallbackParams callbackParams, String sol) {
-
-        CaseData caseData = callbackParams.getCaseData();
-        CaseData.CaseDataBuilder<?, ?> caseDataBuilder = caseData.toBuilder();
-        CaseDocument directionsQuestionnaire =
-            directionsQuestionnaireGenerator.generateDQFor1v2SingleSolDiffResponse(
-                caseData,
-                callbackParams.getParams().get(BEARER_TOKEN).toString(),
-                sol
-            );
-
-        List<Element<CaseDocument>> systemGeneratedCaseDocuments =
-            caseData.getSystemGeneratedCaseDocuments();
-        systemGeneratedCaseDocuments.add(element(directionsQuestionnaire));
-        caseDataBuilder.systemGeneratedCaseDocuments(systemGeneratedCaseDocuments);
-        if (SuperClaimType.SPEC_CLAIM.equals(caseData.getSuperClaimType())) {
-            caseDataBuilder.respondent1GeneratedResponseDocument(directionsQuestionnaire);
-        }
-    }
-
-    /**
-     * Next version for prepareDirectionsQuestionnaire. The main difference is storing the generated document
-     * not only in the generated documents list but also in respondent1GeneratedResponseDocument, so we can use
-     * easily locate it in intention to proceed journey.
-     *
-     * @param callbackParams parameters of the callback
-     * @return response of the callback
-     */
-
     private CallbackResponse prepareDirectionsQuestionnaire(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
-        CaseData.CaseDataBuilder<?, ?> caseDataBuilder = caseData.toBuilder();
+        CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
 
-        MultiPartyScenario scenario = MultiPartyScenario.getMultiPartyScenario(caseData);
-        if (!SuperClaimType.SPEC_CLAIM.equals(caseData.getSuperClaimType())
-            || DirectionsQuestionnaireGenerator.isClaimantResponse(caseData)
-            || scenario == MultiPartyScenario.ONE_V_ONE
-            || scenario == MultiPartyScenario.TWO_V_ONE) {
-            singleResponseFile(
-                callbackParams.getParams().get(BEARER_TOKEN).toString(),
-                caseData,
-                caseDataBuilder
-            );
-        } else if (respondent2HasSameLegalRep(caseData)) {
-            prepareDQForSameLegalRepScenario(callbackParams, caseData, caseDataBuilder);
+        if (respondent2HasSameLegalRep(caseData) && NO == caseData.getRespondentResponseIsSame()) {
+            if (isDefendant1DQResponse(caseData)) {
+                generateAndSet1V2SameSolDivergentResponsesDQ(callbackParams, caseData, caseDataBuilder, "ONE");
+            }
+
+            if (isDefendant2DQResponse(caseData)) {
+                generateAndSet1V2SameSolDivergentResponsesDQ(callbackParams, caseData, caseDataBuilder, "TWO");
+            }
         } else {
-            /*
-            for MultiParty, when there is a single respondent, this block is executed (when only one respondent
-            respondent2SameLegalRepresentative == null, so respondent2HasSameLegalRep(CaseData) == false.
-            I'm not sure if that is what should happen, but I'll leave that to a MP ticket
-            */
-
-            ArrayList<Element<CaseDocument>> updatedDocuments =
-                new ArrayList<>(caseData.getSystemGeneratedCaseDocuments());
-
-            if (caseData.getRespondent1DQ() != null
-                && caseData.getRespondent1ClaimResponseTypeForSpec() != null
-                && (caseData.getRespondent1ClaimResponseTypeForSpec()
-                .equals(RespondentResponseTypeSpec.FULL_DEFENCE)
-                || caseData.getRespondent1ClaimResponseTypeForSpec()
-                .equals(RespondentResponseTypeSpec.PART_ADMISSION))) {
-
-                directionsQuestionnaireGenerator.generateDQFor1v2DiffSol(
-                    caseData,
-                    callbackParams.getParams().get(BEARER_TOKEN).toString(),
-                    "ONE"
-                ).ifPresent(document -> {
-                    updatedDocuments.add(element(document));
-                    caseDataBuilder.respondent1GeneratedResponseDocument(document);
-                });
-            }
-
-            if (caseData.getRespondent2DQ() != null
-                && caseData.getRespondent2ClaimResponseTypeForSpec() != null
-                && (caseData.getRespondent2ClaimResponseTypeForSpec()
-                .equals(RespondentResponseTypeSpec.FULL_DEFENCE)
-                || caseData.getRespondent2ClaimResponseTypeForSpec()
-                .equals(RespondentResponseTypeSpec.PART_ADMISSION))) {
-
-                directionsQuestionnaireGenerator.generateDQFor1v2DiffSol(
-                    caseData,
-                    callbackParams.getParams().get(BEARER_TOKEN).toString(),
-                    "TWO"
-                ).ifPresent(document -> {
-                    updatedDocuments.add(element(document));
-                    caseDataBuilder.respondent2GeneratedResponseDocument(document);
-                });
-            }
-
-            caseDataBuilder.systemGeneratedCaseDocuments(updatedDocuments);
+            generateAndSetDQ(callbackParams, caseData, caseDataBuilder);
         }
 
         return AboutToStartOrSubmitCallbackResponse.builder()
@@ -148,53 +66,42 @@ public class GenerateDirectionsQuestionnaireCallbackHandler extends CallbackHand
             .build();
     }
 
-    private void prepareDQForSameLegalRepScenario(CallbackParams callbackParams,
-                                                  CaseData caseData,
-                                                  CaseData.CaseDataBuilder<?, ?> caseDataBuilder) {
-        if (caseData.getRespondentResponseIsSame() == NO) {
-            if (caseData.getRespondent1DQ() != null
-                && caseData.getRespondent1ClaimResponseTypeForSpec() != null
-                && caseData.getRespondent1ClaimResponseTypeForSpec()
-                .equals(RespondentResponseTypeSpec.FULL_DEFENCE)) {
-                generateDQ1v2SameSol(callbackParams, "ONE");
-            }
-
-            if (caseData.getRespondent2DQ() != null
-                && caseData.getRespondent2ClaimResponseTypeForSpec() != null
-                && caseData.getRespondent2ClaimResponseTypeForSpec()
-                .equals(RespondentResponseTypeSpec.FULL_DEFENCE)) {
-                generateDQ1v2SameSol(callbackParams, "TWO");
-            }
-        } else {
-            singleResponseFile(
-                callbackParams.getParams().get(BEARER_TOKEN).toString(),
-                caseData,
-                caseDataBuilder
-            );
-        }
-    }
-
-    /**
-     * Generates a file for single response and adds it to the system generated files list
-     * and as the respondent1 generated response file.
-     *
-     * @param bearerToken     bearer token to generate files
-     * @param caseData        current case data
-     * @param caseDataBuilder builder for the modified case data
-     */
-    private void singleResponseFile(String bearerToken, CaseData caseData,
-                                    CaseData.CaseDataBuilder<?, ?> caseDataBuilder) {
+    private void generateAndSetDQ(CallbackParams callbackParams, CaseData caseData,
+                                  CaseData.CaseDataBuilder caseDataBuilder) {
         CaseDocument directionsQuestionnaire = directionsQuestionnaireGenerator.generate(
             caseData,
-            bearerToken
+            callbackParams.getParams().get(BEARER_TOKEN).toString()
         );
 
         List<Element<CaseDocument>> systemGeneratedCaseDocuments = caseData.getSystemGeneratedCaseDocuments();
         systemGeneratedCaseDocuments.add(element(directionsQuestionnaire));
         caseDataBuilder.systemGeneratedCaseDocuments(systemGeneratedCaseDocuments);
-        if (SuperClaimType.SPEC_CLAIM.equals(caseData.getSuperClaimType())) {
-            caseDataBuilder.respondent1GeneratedResponseDocument(directionsQuestionnaire);
-        }
+    }
+
+    private boolean isDefendant2DQResponse(CaseData caseData) {
+        return caseData.getRespondent2DQ() != null
+            && RespondentResponseType.FULL_DEFENCE.equals(caseData.getRespondent2ClaimResponseType());
+    }
+
+    private boolean isDefendant1DQResponse(CaseData caseData) {
+        return caseData.getRespondent1DQ() != null
+            && RespondentResponseType.FULL_DEFENCE.equals(caseData.getRespondent1ClaimResponseType());
+    }
+
+    private void generateAndSet1V2SameSolDivergentResponsesDQ(CallbackParams callbackParams, CaseData caseData,
+                                                              CaseData.CaseDataBuilder caseDataBuilder,
+                                                              String defendantIdentifier) {
+        CaseDocument directionsQuestionnaire =
+            directionsQuestionnaireGenerator.generateDQFor1v2SingleSolDiffResponse(
+            caseData,
+            callbackParams.getParams().get(BEARER_TOKEN).toString(),
+            defendantIdentifier
+        );
+
+        List<Element<CaseDocument>> systemGeneratedCaseDocuments =
+            caseData.getSystemGeneratedCaseDocuments();
+        systemGeneratedCaseDocuments.add(element(directionsQuestionnaire));
+        caseDataBuilder.systemGeneratedCaseDocuments(systemGeneratedCaseDocuments);
     }
 
     private boolean respondent2HasSameLegalRep(CaseData caseData) {
